--- a/index.html
+++ b/index.html
@@ -8,38 +8,14 @@
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
-        <audio src="assets/audios/theme-music.mp3" id="background-audio" loop></audio>
- <h3>choose your fighter</h3>
- <button id="toggle-audio">Ativar som</button>
-
- <div class="container">
-<img src="assets/cace.jpg" class="color-02 show-person" >
-<img src="assets/kano.jpg"class="color-01 show-person">
-<img src="assets/mk1.jpg">
-<img src="assets/subzero.jpg" class="color-02 show-person">
-<img src="assets/sonia.jpg"class="color-01 show-person">
-<img src="assets/raiden.jpg" class="color-02 show-person">
-<img src="assets/mk1.jpg">
-<img src="assets/liukang.jpg"  class="color-01 show-person">
-<img src="assets/scorpion.jpg" class="color-02 show-person">    
-  
-</div>
-
-<div class="select-fight">
-
-        <div class="arena">
-                <div class="lutadores" id="n1">
-                        <img class="personagem-01" src="assets/gifs/sub-zero.gif">
-                </div>
-                <div class="lutadores" id="n2">
-                        <img class="personagem-02" src="assets/gifs/sub-zero.gif">
-                </div>
+    <div class="logo-home">
+    <img src="assets/Mortal_kombat_logo.png" alt="logo Mortal Mortal-Kombat">
+    </div>
+    <div class="home-log"> 
+        <div class="itens-log">
+            <h2 class="h-center h-margin"><a href="select.html">Iniciar</a></h2> 
+            <h2 class="h-center h-margin"><a href="#">Créditos</a></h2> 
+            <h2 class="h-center h-margin"><a href="#">Configuração</a></h2> 
         </div>
-
-</div>
-
-<script src="script.js"></script>
-</body>
-
-<audio id="audio" src="assets/audios/inicio.mp3"></audio>
+    </div>
 </html>
